--- a/overlay/AliothFrameworks/res/values/dimens.xml
+++ b/overlay/AliothFrameworks/res/values/dimens.xml
@@ -16,8 +16,8 @@
     <!-- Radius of the software rounded corners. -->
     <dimen name="rounded_corner_radius">126px</dimen>
 
-    <!-- Adjustment for software rounded corners since corners aren't perfectly round. -->
-    <dimen name="rounded_corner_radius_adjustment">22px</dimen>
+    <!-- for 20dp of padding at 2.75px/dp at default density -->
+    <dimen name="rounded_corner_content_padding">55px</dimen>
 
     <!-- Height of the status bar.
          Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead.
