--- a/overlay/AliothFrameworks/res/values/config.xml
+++ b/overlay/AliothFrameworks/res/values/config.xml
@@ -59,4 +59,10 @@
         H 0
         Z
     </string>
+
+    <!-- Whether the device enable the standalone (SA) mode of 5G NR.-->
+    <bool name="config_telephony5gStandalone">true</bool>
+
+    <!-- Whether the device enable the non-standalone (NSA) mode of 5G NR.-->
+    <bool name="config_telephony5gNonStandalone">true</bool>
 </resources>
